# systemd-journal

./: Cargo.toml  LICENSE  README.md  build.rs
examples/: journal-list.rs
src/: ffi.rs  journal.rs  lib.rs  reader.rs
tests/: test_journal_send.rs
