[package]
name = "systemd-journal"
version = "0.1.0"
authors = ["Milo Turner <mturner@starry.com>"]
edition = "2018"
keywords = ["systemd", "sd_journal"]
license-file = "LICENSE"
readme = "README.md"

[features]
default = ["log"]

[dependencies]

[build-dependencies]
pkg-config = "0.3"

[dependencies.log]
version = "0.4"
optional = true
